--- a/package.json
+++ b/package.json
@@ -1,25 +1,27 @@
 {
-  "name": "portfolio",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview",
-    "check": "svelte-check --tsconfig ./tsconfig.json"
-  },
-  "devDependencies": {
-    "@sveltejs/vite-plugin-svelte": "^2.0.4",
-    "@tsconfig/svelte": "^4.0.1",
-    "svelte": "^3.58.0",
-    "svelte-check": "^3.3.1",
-    "tslib": "^2.5.0",
-    "typescript": "^5.0.2",
-    "vite": "^4.3.9"
-  },
-  "dependencies": {
-    "@tabler/icons-svelte": "^2.23.0",
-    "svelte-spa-router": "^3.3.0"
-  }
+	"name": "portfolio",
+	"private": true,
+	"version": "0.0.0",
+	"type": "module",
+	"scripts": {
+		"dev": "vite",
+		"build": "vite build",
+		"preview": "vite preview",
+		"check": "svelte-check --tsconfig ./tsconfig.json",
+		"deploy": "npx gh-pages -d dist/"
+	},
+	"devDependencies": {
+		"@sveltejs/vite-plugin-svelte": "^2.0.4",
+		"@tsconfig/svelte": "^4.0.1",
+		"gh-pages": "^5.0.0",
+		"svelte": "^3.58.0",
+		"svelte-check": "^3.3.1",
+		"tslib": "^2.5.0",
+		"typescript": "^5.0.2",
+		"vite": "^4.3.9"
+	},
+	"dependencies": {
+		"@tabler/icons-svelte": "^2.23.0",
+		"svelte-spa-router": "^3.3.0"
+	}
 }
