--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
 	},
 	"dependencies": {
 		"@tabler/icons-svelte": "^2.23.0",
+		"svelte-device-info": "^1.0.0",
 		"svelte-spa-router": "^3.3.0"
 	}
 }
